Fix `+` icon alignment for filter and condition add button

--- a/public/css/detail/event-rule-detail.less
+++ b/public/css/detail/event-rule-detail.less
@@ -263,6 +263,11 @@
     height: 2.25em;
     margin: 0;
 
+    > .icon {
+      flex-wrap: wrap;
+      align-content: flex-start;
+    }
+
     .event-rule-button();
   }
 }
